@@ -24,3 +24,4 @@ changes:
 [ADD] added graphs
 [FIX] buttons sometimes not calling
 [ADD] location dropdown menu
+[QOL] automatically select "today" tab
